# xorg__lib__libxkbui

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  configure.ac  xkbui.pc.in
include/X11/extensions/: XKBui.h
src/: .gitignore  Makefile.am  XKBui.c  XKBuiPriv.h
